# QuantumKernelAnomalyDetector

./: .gitignore  CLAUDE.md  LICENSE  PROGRESS.md  README.md  pyproject.toml
configs/experiments/: default.yaml  kernel_comparison.yaml
configs/hardware/: noise_sweep.yaml  simulator.yaml
dashboard/: data_bundle.js  export_data.py  index.html
experiments/: run_analysis.py  run_experiment.py  run_hardware.py  run_synthetic_benchmark.py
scripts/: run_all.sh  verify_phase1.py  verify_phase2.py  verify_phase3.py  verify_phase4.py  verify_phase5.py  verify_phase6.py
src/: __init__.py
src/analysis/: __init__.py  alignment.py  expressibility.py  geometric.py  noise.py  psd_correction.py  zne.py
src/data/: loader.py  synthetic.py  transforms.py
src/hardware/: __init__.py  ibm_runner.py  noise_models.py
src/kernels/: __init__.py  base.py  classical.py  estimation.py  factory.py  quantum.py
src/models/: __init__.py  baselines.py  kpca.py  ocsvm.py
src/utils/: __init__.py  caching.py  metrics.py
tests/: conftest.py
tests/test_analysis/: __init__.py  test_alignment.py  test_expressibility.py  test_geometric.py  test_noise_study.py  test_psd_correction.py  test_synthetic.py  test_zne.py
tests/test_dashboard/: test_export.py
tests/test_data/: test_loader.py  test_transforms.py
tests/test_hardware/: __init__.py  test_ibm_runner.py  test_noise_models.py
tests/test_kernels/: test_base.py  test_classical_kernels.py  test_covariant_feature_map.py  test_feature_map_base.py  test_hardware_efficient_feature_map.py  test_iqp_feature_map.py  test_quantum.py  (+3 more)
(+17 files in other folders)
